--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -8,21 +8,23 @@ jobs:
             runs-on: ubuntu-latest
             steps:
                 - name: Checkout code 
-                uses: actions/checkout@v2
+                uses: actions/checkout@v4
 
     job-2:
+        runs-on: ubuntu-latest
         needs: [job-1]
         name: Update README
         steps:
             run: / python3 update_readme.py
                     
     job-3:
+        runs-on: ubuntu-latest
         needs: [job-1, job-2]
         name: Commit changes
         steps:
             run: 
-                git config --global user.name "${{ secrets.GITHUB_USER }}" 
-                git config --global user.email "${{ secrets.GITHUB_EMAIL }}"
+                git config --global user.name "${{ secrets.USER }}" 
+                git config --global user.email "${{ secrets.EMAIL }}"
                 git add README.md
                 git commit -m "Update README.md"
                 git push
