--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,30 +1,32 @@
 name: update
-on: [push]
-branches: 
-    - main
+on:
+  push:
+    branches:
+      - main
 jobs:
-    job-1:
-        checkout:
-            runs-on: ubuntu-latest
-            steps:
-                - name: Checkout code 
-                uses: actions/checkout@v4
+  job-1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    job-2:
-        runs-on: ubuntu-latest
-        needs: [job-1]
-        name: Update README
-        steps:
-            run: / python3 update_readme.py
-                    
-    job-3:
-        runs-on: ubuntu-latest
-        needs: [job-1, job-2]
-        name: Commit changes
-        steps:
-            run: 
-                git config --global user.name "${{ secrets.USER }}" 
-                git config --global user.email "${{ secrets.EMAIL }}"
-                git add README.md
-                git commit -m "Update README.md"
-                git push
+  job-2:
+    runs-on: ubuntu-latest
+    needs: [job-1]
+    name: Update README
+    steps:
+      - name: Run Python script
+        run: python3 update_readme.py
+
+  job-3:
+    runs-on: ubuntu-latest
+    needs: [job-1, job-2]
+    name: Commit changes
+    steps:
+      - name: Configure Git
+        run: |
+          git config --global user.name "${{ secrets.USER }}"
+          git config --global user.email "${{ secrets.EMAIL }}"
+          git add README.md
+          git commit -m "Update README.md"
+          git push
